# cmake-externalproject-test

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  bar.c  build-gmp.sh  foo.c  lib.c  main.c
gmp/: build-gmp.sh  configure-gmp.sh  empty.s
